# pGramsFC

./: .gitmodules
command_sender/: SendCommand.py  TestArgument.txt
command_sender/pGramsComSender/: ArgumentFileLoader.py  CommandDefinition.py  CommandExecuter.py  ConfirmationWindow.py  GUIManager.py  GUIgeometry.py  LogText.py  MainWindow.py  NumberEntryGroup.py  ToolTip.py  Window.py
command_sender/source/: CMakeLists.txt  CommandBuilder.cc  CommandSender.cc  CommandSender.hh  network.cfg  send_command.cc  send_command_raw.cc
docs/: .gitignore  CommandSender.md  Installation.md
examples/DAQ_com_communication/: DAQ_com_communication.rb
examples/environmental_data/: get_environmental_data.rb
examples/get_MHADC_data/: get_MHADC_data.rb
examples/get_all_sensors_NEU/: get_all_sensors_NEU_telemetry.rb
examples/get_labjack/: get_labjack.rb
examples/get_pressure/: get_pressure.rb
examples/inclinometer/: emulateInclinometer.py  get_inclinometer.rb
examples/interpret_telemetry/: interpret_telemetry.rb
examples/rtd_sensor/: measure_temperature.rb
examples/unified1/: unified1.rb
onboard/: CMakeLists.txt
onboard/cmake/: BME280.cmake  BME68x.cmake
onboard/rubyext/: CMakeLists.txt  GRAMSBalloon.i
onboard/source/: CMakeLists.txt
onboard/source/BME68x-Sensor-API/: CMakeLists.txt
onboard/source/BME68x-Sensor-API/include/: bme68x_defs.h
onboard/source/BME68x-Sensor-API/src/: bme68x.c
onboard/source/core/: CMakeLists.txt
onboard/source/core/include/: ADC128S102IO.hh  BME280IO.hh  BME680IO.hh  BaseTelemetryDefinition.hh  BayCatAPICaller.hh  BayCatControl.hh  BayCatI2CIO.hh  BayCatSPIIO.hh  CommandDefinition.hh  CommunicationFormat.hh  DAC121S101IO.hh  DBFieldSink.hh  EncodedSerialCommunication.hh  ErrorManager.hh  FT232HIO.hh  HKDataSaver.hh  HubHKTelemetry.hh  I2CInterface.hh  InclinometerController.hh  IridiumPacketPool.hh  LabJackAddresses.hh  LabJackIO.hh  MAX31865IO.hh  MHADCMapping.hh  MPSSEController.hh  MPSSEDeviceManager.hh  MPSSEUtil.hh  MosquittoIO.hh  MySQLFieldSink.hh  MySQLIO.hh  PDUCommandCSMapping.hh  PDUMapping.hh  PDUTelemetryCSMapping.hh  SPIInterface.hh  SPIInterfaceMultiplexer.hh  SerialCommunication.hh  SocketCommunicationServer.hh  TelemetryDefinition.hh  ToFBiasController.hh  VCSMapping.hh  (+1 more)
onboard/source/core/src/: ADC128S102IO.cc  BME280IO.cc  BME680IO.cc  BaseTelemetryDefinition.cc  BayCatAPICaller.cc  BayCatControl.cc  BayCatI2CIO.cc  BayCatSPIIO.cc  CommandDefinition.cc  CommunicationFormat.cc  DAC121S101IO.cc  EncodedSerialCommunication.cc  FT232HIO.cc  HubHKTelemetry.cc  InclinometerController.cc  LabJackIO.cc  MAX31865IO.cc  MPSSEController.cc  MPSSEDeviceManager.cc  MosquittoIO.cc  MySQLIO.cc  OrientationInformation.cc  PDUCommandCSMapping.cc  PDUMapping.cc  PDUTelemetryCSMapping.cc  SPIInterface.cc  SPIInterfaceMultiplexer.cc  SerialCommunication.cc  SocketCommunicationServer.cc  TelemetryDefinition.cc  ToFBiasController.cc  VCSMapping.cc  VHKTelemetryMapping.cc
onboard/source/modules/: CMakeLists.txt
onboard/source/modules/include/: ControlPDU.hh  ControlPDUDAC.hh  DetectErrorCallbackFromDAQ.hh  DistributeCommand.hh  DividePacket.hh  GetEnvironmentalData.hh  GetInclinometerData.hh  GetLabJackData.hh  GetPDUADC.hh  GetPDUInfo.hh  GetPressure.hh  I2CManager.hh  InterpretTelemetry.hh  MeasureTemperatureWithRTDSensor.hh  MosquittoManager.hh  MySQLManager.hh  PassTelemetry.hh  PushToMySQL.hh  ReceiveCommand.hh  ReceiveStatusFromDAQComputer.hh  ReceiveTelemetry.hh  SPIManager.hh  SendArrayByMQTT.hh  SendCommandToDAQComputer.hh  SendPacketByMQTT.hh  SendTelemetry.hh  SocketCommunicationManager.hh  TreatToFCallback.hh
onboard/source/modules/src/: ControlPDU.cc  ControlPDUDAC.cc  DetectErrorCallbackFromDAQ.cc  DistributeCommand.cc  DividePacket.cc  GetEnvironmentalData.cc  GetInclinometerData.cc  GetLabJackData.cc  GetMHADCData.cc  GetPDUADC.cc  GetPDUInfo.cc  GetPressure.cc  I2CManager.cc  InterpretTelemetry.cc  MeasureOrientationByMHADC.cc  MeasureTemperatureWithRTDSensor.cc  MosquittoManager.cc  MySQLManager.cc  PassTelemetry.cc  PushToMySQL.cc  ReceiveCommand.cc  ReceiveStatusFromDAQComputer.cc  ReceiveTelemetry.cc  SPIManager.cc  SendArrayByMQTT.cc  SendCommandToDAQComputer.cc  SendPacketByMQTT.cc  SendTelemetry.cc  Sleep.cc  SocketCommunicationManager.cc  TreatToFCallback.cc
operation/monitor/: monitor.rb
operation/neu_test_20260128/: neu_test_20260128.rb
operation/neu_test_20260223/: neu_test_20260223.rb
service/: .gitignore  install.sh  install_ground.sh  pGramsFC.service  pGramsFC_ground.service  starter.sh  starter_ground.sh
settings/: pGRAMS.sh
tools/i2c/: CMakeLists.txt  i2c.cc
tools/mysql/: make_error_flag_query.py
tools/pdu/: CMakeLists.txt  pdu_test.cc  pdu_test.py
tools/socket_test/: socket_test.py
tools/spi/: CMakeLists.txt  main.cc  simple_test.cc
tools/versaAPI/: add_dkms.sh  dkms-build.sh  dkms.conf
